# eagle

./: .env.example  .gitignore  AIFMD 2.0.docx  SAAS KPIs.docx  check_adapter.py  pull_latest.bat  push_changes.bat  pyproject.toml  run_nca_setup.ps1  run_regressions.bat  run_tests.bat  start_UI_eagle.bat  start_eagle.bat  sync_to_local.bat
Application/: lessons_learned.md  m_adapter_split_plan.md
Application/aifmd_packaging/: __init__.py  aif_builder.py  aifm_builder.py  aifmd_nca_packaging.py  orchestrator.py
Application/canonical/: __init__.py  aifmd_field_registry.py  aifmd_projection.py  aifmd_source_entities.py  (+6 more)
Blueprint/: eagle_continuous_compliance_assurance_design_v0_3.docx  eagle_design_system.md  eagle_dev_environment_setup.md  eagle_dev_security_guidelines_v2_0.yaml  eagle_manual_controls.yaml  eagle_req_mod_admin.yaml  eagle_req_mod_api.yaml  eagle_req_mod_audit.yaml  eagle_req_mod_billing.yaml  eagle_req_mod_client.yaml  eagle_req_mod_comp.yaml  eagle_req_mod_data.yaml  eagle_req_mod_gtm.yaml  eagle_req_mod_management.yaml  eagle_req_mod_review.yaml  eagle_req_mod_sub.yaml  eagle_req_mod_trial.yaml  eagle_requirements_overview.yaml  eagle_software_architecture.md  project_eagle_ceo.md  project_eagle_cfo.md  project_eagle_compliance_risk.md  project_eagle_coo.md  project_eagle_cro.md  project_eagle_delta.yaml  project_eagle_head_cs.md  project_eagle_head_engineering.md
Testing/: run_all_regressions.py  sync_evidence_to_drive.bat  test_review_api.py
api/: deps.py  main.py  version.py
frontend/: next.config.mjs  package-lock.json  package.json
(+3143 files in other folders)
