[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eagle"
version = "0.1.0"
description = "Project Eagle — Multi-product regulatory reporting platform"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1.0",
    "PyYAML>=6.0",
    "lxml>=4.9.0",
    "psycopg2-binary>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["Application"]

[tool.pytest.ini_options]
testpaths = ["Testing"]
python_files = ["test_*.py", "run_regression_*.py"]
